--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <wea5-root></wea5-root>
+  <script src="node_modules/chart.js/src/chart.js"></script>
 </body>
 </html>
